Add header saying learning_zig is still up to date
Rename GPA to DebugAllocator

--- a/src/learning_zig/00-index.html
+++ b/src/learning_zig/00-index.html
@@ -6,6 +6,8 @@ tags: [zig]
 permalink: "/learning_zig/"
 ---
 <article>
+	<aside id=uptodate><p>While this series was written in 2023, it is still relevant in 2025 and largely kept up to date. If you find an issue, you can report it <a href="https://github.com/karlseguin/blog">on github</a>.</p></aside>
+
 	<section style="border:0">
 		<h1 id=learning_zig tabindex=-1><a href=#learning_zig aria-hidden-true>Learning Zig</a></h1>
 		<p>Welcome to Learning Zig, an introduction to the Zig programming language. This guide aims to make you comfortable with Zig. It assumes prior programming experience, though not in any particular language.</p>
