--- a/src/learning_zig/01-language-overview-1.html
+++ b/src/learning_zig/01-language-overview-1.html
@@ -11,6 +11,9 @@ permalink: "/learning_zig/language_overview_1/"
 </div>
 
 <article>
+	<aside id=uptodate><p>While this series was written in 2023, it is still relevant in 2025 and largely kept up to date. If you find an issue, you can report it <a href="https://github.com/karlseguin/blog">on github</a>.</p></aside>
+
+
 	<h1 tabindex=-1 id=language_overview><a href=#language_overview aria-hidden=true>Language Overview - Part 1</a></h1>
 	<p>Zig is a strongly typed compiled language. It supports generics, has powerful compile-time metaprogramming capabilities and <strong>does not</strong> include a garbage collector. Many people consider Zig a modern alternative to C. As such, the language's syntax is C-like. We're talking semicolon terminated statements and curly brace delimited blocks.</p>
 
