--- a/src/learning_zig/02-language-overview-2.html
+++ b/src/learning_zig/02-language-overview-2.html
@@ -13,6 +13,9 @@ permalink: "/learning_zig/language_overview_2/"
 </div>
 
 <article>
+	<aside id=uptodate><p>While this series was written in 2023, it is still relevant in 2025 and largely kept up to date. If you find an issue, you can report it <a href="https://github.com/karlseguin/blog">on github</a>.</p></aside>
+
+
 	<h1 tabindex=-1 id=language_overview><a href=#language_overview aria-hidden=true>Language Overview - Part 2</a></h1>
 	<p>This part continues where the previous left off: familiarizing ourselves with the language. We'll explore Zig's control flow and types beyond structures. Together with the first part, we'll have covered most of the language's syntax allowing us to tackle more of the language and the standard library.</p>
 
