--- a/src/learning_zig/03-style-guide.html
+++ b/src/learning_zig/03-style-guide.html
@@ -13,6 +13,9 @@ permalink: "/learning_zig/style_guide/"
 </div>
 
 <article>
+	<aside id=uptodate><p>While this series was written in 2023, it is still relevant in 2025 and largely kept up to date. If you find an issue, you can report it <a href="https://github.com/karlseguin/blog">on github</a>.</p></aside>
+
+
 	<h1 tabindex=-1 id=styleguide><a href=#styleguide aria-hidden=true>Style Guide</a></h1>
 	<p>In this short part, we'll cover two coding rules enforced by the compiler as well as the standard library's naming convention.</p>
 
