--- a/src/learning_zig/04-pointers.html
+++ b/src/learning_zig/04-pointers.html
@@ -13,6 +13,8 @@ permalink: "/learning_zig/pointers/"
 </div>
 
 <article>
+	<aside id=uptodate><p>While this series was written in 2023, it is still relevant in 2025 and largely kept up to date. If you find an issue, you can report it <a href="https://github.com/karlseguin/blog">on github</a>.</p></aside>
+
 	<h1 tabindex=-1 id=pointers><a href=#pointers aria-hidden=true>Pointers</a></h1>
 	<p>Zig doesn't include a garbage collector. The burden of managing memory is on you, the developer. It's a big responsibility as it has a direct impact on the performance, stability and security of your application.</p>
 
